--- a/Demo_test_knit.Rmd
+++ b/Demo_test_knit.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Demo_test"
+title: "Cambridge"
 output: html_document
 ---
 
@@ -13,16 +13,31 @@ This is an R Markdown document. Markdown is a simple formatting syntax for autho
 
 When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
 
-```{r cars}
-summary(cars)
+```{r load packages, message=FALSE}
+library(sf)
+library(tidyverse)
+library(ggspatial)
+library(ggthemes)
 ```
 
+## St_Read Tryout
+
+```{r st_read}
+
+wards <- st_read("wards_precincts.geojson")
+neighborhoods <- st_read("BOUNDARY_CDDNeighborhoods.shp.zip")
+libraries <- st_read("library_locations.xml")
+```
 ## Including Plots
 
 You can also embed plots, for example:
 
-```{r pressure, echo=FALSE}
-plot(pressure)
+```{r plotting test, echo=FALSE}
+
+neigh_plot <- ggplot(neighborhoods) +
+  geom_sf()
+
+neigh_plot
 ```
 
 Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
